--- a/index.html
+++ b/index.html
@@ -532,6 +532,26 @@
             </li>
           </ul>
         </div>
+        <div class="third-column">
+          <p class="text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-field">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="footer-form-submit" type="submit">
+              Subscribe
+              <svg class="footer-form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -541,6 +561,81 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <form class="modal-form">
+          <h2 class="modal-form-title text">
+            Leave your contacts and we will call you back
+          </h2>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc name">Name</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user_name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+              />
+              <svg class="modal-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Phone</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user_phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Email</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user_email"
+                required
+              />
+              <svg class="modal-form-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field-message">
+            <span class="modal-form-field-desc">Comment</span>
+            <textarea
+              class="modal-form-message"
+              name="user_message"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="modal-form-field-checkbox">
+            <input
+              class="modal-form-input-checkbox"
+              type="checkbox"
+              name="user_policy"
+              required
+            />
+            <svg class="modal-form-own-checkbox" width="16" height="16">
+              <use
+                class="modal-form-checkmark-icon"
+                href="./images/icons.svg#icon-checkbox"
+              ></use>
+            </svg>
+            I accept the terms and conditions of the
+            <a class="modal-form-policy-link" href="#">Privacy Policy</a>
+          </label>
+          <button class="modal-form-submit" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
