--- a/portfolio.html
+++ b/portfolio.html
@@ -331,6 +331,27 @@
             </li>
           </ul>
         </div>
+        <div class="third-column">
+          <p class="text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-field">
+              <!-- <span class="footer-form-label">E-mail</span> -->
+              <input
+                class="footer-form-input"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="footer-form-submit" type="submit">
+              Subscribe
+              <svg class="footer-form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
