--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               <input
                 class="footer-form-input"
                 type="email"
-                name="user_email"
+                name="user-email"
                 placeholder="E-mail"
                 required
               />
@@ -561,32 +561,34 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-form-title text">
+          Leave your contacts and we will call you back
+        </p>
         <form class="modal-form">
-          <h2 class="modal-form-title text">
-            Leave your contacts and we will call you back
-          </h2>
-          <label class="modal-form-field">
-            <span class="modal-form-field-desc name">Name</span>
-            <span class="modal-form-input-wrapper">
+          <div class="modal-form-field-wrapper">
+            <label class="modal-form-field" for="user-name"> Name</label>
+            <div class="modal-form-input-wrapper">
               <input
                 class="modal-form-input"
                 type="text"
-                name="user_name"
+                id="user-name"
+                name="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
               />
-              <svg class="modal-form-input-icon" width="18" height="18">
+              <svg class="modal-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
-            </span>
-          </label>
-          <label class="modal-form-field">
-            <span class="modal-form-field-desc">Phone</span>
-            <span class="modal-form-input-wrapper">
+            </div>
+          </div>
+          <div class="modal-form-field-wrapper">
+            <label class="modal-form-field" for="user-phone">Phone</label>
+            <div class="modal-form-input-wrapper">
               <input
                 class="modal-form-input"
                 type="tel"
-                name="user_phone"
+                id="user-phone"
+                name="user-phone"
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
@@ -594,46 +596,56 @@
               <svg class="modal-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
-            </span>
-          </label>
-          <label class="modal-form-field">
-            <span class="modal-form-field-desc">Email</span>
-            <span class="modal-form-input-wrapper">
+            </div>
+          </div>
+          <div class="modal-form-field-wrapper">
+            <label class="modal-form-field" for="user-email">Email</label>
+            <div class="modal-form-input-wrapper">
               <input
                 class="modal-form-input"
                 type="email"
-                name="user_email"
+                id="user-email"
+                name="user-email"
                 required
               />
               <svg class="modal-form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
-            </span>
-          </label>
-          <label class="modal-form-field-message">
-            <span class="modal-form-field-desc">Comment</span>
+            </div>
+          </div>
+          <div class="modal-form-field-message-wrapper">
+            <label class="modal-form-field" for="user-comment">Comment</label>
             <textarea
               class="modal-form-message"
-              name="user_message"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
-          </label>
-          <label class="modal-form-field-checkbox">
+          </div>
+          <div class="modal-form-field-checkbox-wrapper">
             <input
-              class="modal-form-input-checkbox"
+              class="modal-form-input-checkbox visually-hidden"
               type="checkbox"
-              name="user_policy"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
               required
             />
-            <svg class="modal-form-own-checkbox" width="16" height="16">
-              <use
-                class="modal-form-checkmark-icon"
-                href="./images/icons.svg#icon-checkbox"
-              ></use>
-            </svg>
-            I accept the terms and conditions of the
-            <a class="modal-form-policy-link" href="#">Privacy Policy</a>
-          </label>
+            <label class="modal-form-field-checkbox" for="user-privacy">
+              <span class="modal-form-field-checkbox-span">
+                <svg class="modal-form-own-checkbox" width="10" height="8">
+                  <use
+                    class="modal-form-checkmark-icon"
+                    href="./images/icons.svg#icon-checkbox"
+                  ></use></svg></span
+              >I accept the terms and conditions of the<a
+                class="modal-form-policy-link"
+                href="#"
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
+
           <button class="modal-form-submit" type="submit">Send</button>
         </form>
       </div>
