--- a/portfolio.html
+++ b/portfolio.html
@@ -339,7 +339,7 @@
               <input
                 class="footer-form-input"
                 type="email"
-                name="user_email"
+                name="user-email"
                 placeholder="E-mail"
                 required
               />
